Deployment/dev/k8s/k8sObjects/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-node-deployment
spec:
  selector:
    matchLabels:
      app: helloNode
  replicas: 2
  template:
    metadata:
      labels:
        app: helloNode
    spec:
      containers:
      - name: hello-node-container
        # imagePullPolicy: Never
        image: '388412347424.dkr.ecr.us-east-1.amazonaws.com/hello-node-repo-ecr:Dockerizing-latest'
        ports:
        - containerPort: 3010
      # - name: just-sidecar
      #   # imagePullPolicy: Never
      #   image: '388412347424.dkr.ecr.us-east-1.amazonaws.com/hello-node-repo-ecr:Dockerizing-50'
      #   ports:
      #   - containerPort: 3011
