Deployment/dev/k8s/k8sObjects/ip-cluster-hn.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-node-cluster-ip
spec:
  type: ClusterIP # good for dev not prod
  selector:
    app: helloNode
  ports:
    - port: 3020        # Used in multip client system
      targetPort: 3010  # The EXPOSE port of container
      # nodePort: 32100
